force-app/main/default/objects/Historical_Forecast__c/Historical_Forecast__c.object-meta.xml
<CustomObject>
    <label>Historical Forecast</label>
    <nameField>
        <displayFormat>HF-{000000}</displayFormat>
        <label>Historical Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Forecast</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>