force-app/main/default/objects/Historical_Forecast__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historical Forecast</relationshipLabel>
    <relationshipName>Historical_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>