force-app/main/default/objects/Historical_Forecast__c/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <label>ASP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>