force-app/main/default/objects/Historical_Forecast__c/fields/Country_Sale__c.field-meta.xml
<CustomField>
    <fullName>Country_Sale__c</fullName>
    <label>Country Sale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>