force-app/main/default/objects/Historical_Forecast__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Historical Forecast</relationshipLabel>
    <relationshipName>Historical_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>