force-app/main/default/objects/Historical_Forecast__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>