force-app/main/default/objects/Historical_Forecast__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Historical Forecast</relationshipLabel>
    <relationshipName>Historical_Forecast</relationshipName>
    <type>Lookup</type>
</CustomField>